--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <body>
     <script src="sketch.js"></script>
+    <script src="player.js"></script>
+    <script src="monster.js"></script>
+    <script src="planet.js"></script>
 </body>
 
 </html>
