--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="player.js"></script>
     <script src="monster.js"></script>
     <script src="planet.js"></script>
+    <script src="vector_class.js"></script>
 </body>
 
 </html>
