--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <body>
     <script src="sketch.js"></script>
     <script src="player.js"></script>
-    <script src="monster.js"></script>
+    <script src="monster1.js"></script>
     <script src="planet.js"></script>
     <script src="vector_class.js"></script>
+    <script src="particle.js"></script>
 </body>
 
 </html>
